# anderson_feedback_bot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 47a0d5023e73_create_initial_tables.py
app/: check_cafes.py  check_data.py  check_report.py  check_surveys.py  check_users.py  cleanup_test_cafe.py  create_superuser.py  main.py  manage_user.py  reset_surveys.py  seed_cafes.py  seed_data.py  seed_test_managers.py  seed_test_surveys.py  set_user_role_test.py  test_db_connection.py
app/bot/: bot.py
app/bot/handlers/: __init__.py  network_report.py  report.py  start.py  superuser_report.py  survey.py
app/bot/keyboards/: common.py  report.py  survey.py
app/bot/states/: network_report.py  report.py  superuser_report.py  survey.py
app/core/: config.py  constants.py
app/db/: session.py
app/db/models/: __init__.py  cafe.py  survey.py  user.py
app/db/repositories/: cafe_repository.py  survey_repository.py  user_repository.py
app/schemas/: cafe.py  report.py  survey.py  user.py
app/services/: auth_service.py  excel_report_service.py  report_service.py  survey_service.py
docs/: decisions.md  product_requirements.md
reports/: cafe_report_2_2026-05-05_2026-05-30.xlsx  network_report_2026-05-05_2026-05-30.xlsx
