[project]
name = "restaurant-feedback-bot"
version = "0.1.0"
description = "Telegram bot for collecting and analyzing restaurant guest surveys"
requires-python = ">=3.12.9"
dependencies = [
    "aiogram>=3.4,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "openpyxl>=3.1,<4.0",
]

[tool.setuptools]
packages = ["app"]